test/frontend/fail/operator_struct.osl
struct __operator__add__ {
    int a, b;
};

shader foo() {
}
